Remove redundant `to_s`

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,6 +11,9 @@ Style/StringLiterals:
 Style/AccessModifierDeclarations:
   Enabled: false
 
+Style/AccessorGrouping:
+  Enabled: false
+
 Style/BlockDelimiters:
   Enabled: false
 
